feat: add route to fetch all employees
